test/chainsaw/authpolicy/smapi/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: smapi
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: ../../../resources/skiperator/application.yaml
        - apply:
            file: ../../../resources/ingress/wildcard-ingress.yaml
        - create:
            file: authpolicy.yaml
        - script:
            content: sleep 14
        - script:
            content: |
              hurl --error-format long \
              --insecure --test tests.hurl \
              --variable baseUrl="https://127.0.0.1:8443" \
              --variable admin="$(../../../../venv/bin/python ./../../../../scripts/get-mock-oauth2-token.py --issuer smapi --code admin --token_name access_token)" \
              --variable user="$(../../../../venv/bin/python ./../../../../scripts/get-mock-oauth2-token.py --issuer smapi --code user --token_name access_token)" \
              --variable backstage="$(../../../../venv/bin/python ./../../../../scripts/get-mock-oauth2-token.py --issuer smapi --code backstage --token_name access_token)"
